fix(plugins/plugin-client-common): double whitespace may be removed from completed inputs
Fixes #6279

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
@@ -57,6 +57,9 @@ $focus-color: var(--color-brand-01);
       border-color: $input-border-editing;
     }
   }
+  @include Input {
+    white-space: pre-wrap;
+  }
 }
 body[kui-theme-style='light'] {
   .repl-block:not(.repl-active) {
